# jackal

./: README.md  pyproject.toml
src/jackal/: __init__.py  mc.py  mc2.py  models.py  utils.py
